# pde-fluid-phi

./: .dockerignore  ARCHITECTURE.md  AUTONOMOUS_SDLC_EXECUTION_REPORT.md  AUTONOMOUS_SDLC_FINAL_IMPLEMENTATION_SUMMARY.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_REPORT.md  CHANGELOG.md  COMPREHENSIVE_DOCUMENTATION.md  CONTRIBUTING.md  Dockerfile  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PRODUCTION_DEPLOYMENT_FINAL.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_CHARTER.md  README.md  RESEARCH_VALIDATION_REPORT.md  advanced_quality_gates.py  benchmark_results_mock.json  comprehensive_quality_gates.py  comprehensive_test_runner.py  demo_basic_functionality.py  demo_generation1_basic.py  demo_generation2_robust.py  demo_generation3_scaled.py  demo_minimal_functionality.py  demo_results.json  demo_scaling_working.py  deploy_production.py  deployment_config.json  deployment_history.db  deployment_report_20250827_152349.json  deployment_report_deploy-1755865856.json  docker-compose.yml  final_system_validation.py  performance_benchmarks.py  performance_scaling_demo.py  production_deployment.py  progressive_monitoring_system.py  (+40 more)
.github/workflows/: ci.yml
deployment/: Dockerfile  deploy.sh  deploy_production.py  docker-compose.prod.yml  docker-compose.yml  k8s-deployment.yaml  k8s-service.yaml  production_config.yaml  production_deployment_guide.md  production_orchestration.py  production_ready_deployment.yaml
deployment/.github/workflows/: neural-operator-cicd.yml
deployment/config/staging/: deployment.json
deployment/docker/: Dockerfile.production
deployment/helm/pde-fluid-phi/: Chart.yaml  values.yaml
deployment/kubernetes/: deployment.yaml  namespace.yaml  storage.yaml  training-job.yaml
deployment/monitoring/: grafana-dashboard.json  prometheus.yml  servicemonitor.yaml
deployment/scripts/: deploy.sh  deploy_production.sh  entrypoint.sh  health-check.sh
deployment/terraform/: main.tf
docs/: ROADMAP.md
docs/adr/: 001-rational-fourier-operators.md  template.md
examples/: advanced_features.py  basic_usage.py  core_usage_example.py
kubernetes/: deployment.yaml
quality_gate_results/: comprehensive_quality_report.json
quality_reports/: quality_report_20250816_150543.json  quality_report_20250816_150543.txt  quality_report_20250818_013825.json  quality_report_20250818_013825.txt  quality_report_20250819_183032.json  quality_report_20250819_183348.json  quality_report_20250819_183823.json  quality_report_20250820_190556.json  quality_report_20250820_190601.json  quality_report_20250820_190601.txt  quality_report_20250826_040939.json  quality_report_20250826_040939.txt  quality_report_20250826_041000.json  quality_report_20250828_191606.json  quality_report_20250828_191606.txt  quality_report_20250828_191610.json  quality_report_20250828_191610.txt  quality_summary_20250816_150543.json  quality_summary_20250818_013825.json  quality_summary_20250820_190556.txt  quality_summary_20250820_190601.json  quality_summary_20250826_040939.json  quality_summary_20250828_191606.json  quality_summary_20250828_191610.json
research_documentation/: breakthrough_research_paper.md  validation_summary.json
scripts/: performance_benchmark.py  run_quality_checks.sh  security_scan.py
src/pde_fluid_phi/: __init__.py
src/pde_fluid_phi/benchmarks/: breakthrough_research_framework.py
src/pde_fluid_phi/cli/: __init__.py  benchmark.py  evaluate.py  generate.py  main.py  train.py
src/pde_fluid_phi/data/: __init__.py  spectral_decomposition.py  turbulence_dataset.py
src/pde_fluid_phi/enhancement/: quantum_autonomous_evolution.py
src/pde_fluid_phi/evaluation/: __init__.py  metrics.py
src/pde_fluid_phi/kernels/: __init__.py  spectral_kernels.py
src/pde_fluid_phi/models/: __init__.py  autonomous_self_healing_system.py  fno3d.py  multiscale_fno.py  rfno.py  self_healing_rfno.py
src/pde_fluid_phi/operators/: __init__.py  adaptive_spectral_resolution.py  quantum_enhanced_stability.py  quantum_rational_fourier.py  rational_fourier.py  spectral_layers.py  stability.py
src/pde_fluid_phi/optimization/: __init__.py  auto_scaling.py  caching.py  concurrent_processing.py  distributed_computing.py  distributed_training.py  evolutionary_nas.py  extreme_scale_optimizer.py  memory_optimization.py  performance_optimization.py  petascale_distributed_system.py
src/pde_fluid_phi/physics/: multiphysics_coupling.py
src/pde_fluid_phi/training/: __init__.py  curriculum.py  distributed.py  losses.py  stability_trainer.py
src/pde_fluid_phi/utils/: __init__.py  advanced_error_recovery.py  config_utils.py  device_utils.py  enhanced_config.py  enhanced_device.py  enhanced_error_handling.py  enhanced_validation.py  error_handling.py  exceptions.py  io_utils.py  logging_utils.py  monitoring.py  performance_monitor.py  security.py  spectral_utils.py  validation.py
test_results/: comprehensive_test_results.json
tests/: __init__.py  test_cli.py  test_comprehensive.py  test_core_functionality.py  test_integration.py  test_operators.py  test_spectral_utils.py
validation_demo_results/: breakthrough_validation_report.json  validation_summary.txt
validation_reports/: system_validation_20250819_183823.json  system_validation_20250820_190557.json  system_validation_20250826_041000.json  validation_summary_20250819_183823.txt  validation_summary_20250826_041000.txt
